...
    <string name="dialog_confirm_resources_sync_message"> You are going to download the resources. Please make sure to be online.
        If you have provided notification permission to the app, you can follow the progress on the notifications.
    </string>
    <string name="dialog_confirm_resources_sync_confirm">Launch</string>
    <string name="dialog_confirm_resources_sync_decline">Cancel</string>

    <string name="dialog_delete_account_title">Delete account</string>
    <string name="dialog_delete_account_message">Are you sure that you want to delete your account? This action is permanent and irreversible</string>
    <string name="dialog_delete_account_confirm">Yes, delete account</string>
    <string name="dialog_delete_account_decline">Decline</string>

    <string name="sync_notification_title">Resources synchronization</string>
    <string name="sync_toast_start">Synchronization started! Check the notifications to follow the progress.</string>
    <string name="sync_toast_failed">Synchronization failed. Try again and, if the error persists, contact us.</string>
    <string name="sync_toast_concluded">Synchronization concluded! Pajelingo is up to date now!</string>
    <string name="sync_notification_failed_title">Synchronization failed</string>
...
    <string name="tab_icon_search_title">Search word</string>
    <string name="tab_icon_synchro_title">Get resources</string>
    <string name="search_button_text">Search</string>
    <string name="search_edit_text_hint">Search something</string>
    <string name="tab_icon_login_title">Login</string>
    <string name="tab_icon_logout_title">Logout</string>
    <string name="sp_file_name">MySharedPref</string>
    <string name="is_syncing_sp">is_syncing</string>
    <string name="username_sp">username</string>
    <string name="email_sp">email</string>
    <string name="token_sp">token</string>
    <string name="picture_sp">picture</string>
    <string name="bio_sp">bio</string>
    <string name="badges_sp">badges</string>
    <string name="is_first_access">is_first_access</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="choose_language_label">Select a language</string>
    <string name="greeting_text">Welcome back, %1$s</string>
    <string name="tab_icon_rankings_title">Rankings</string>
    <string name="tab_icon_menu_title">Menu</string>
    <string name="all_languages_spinner_option">All languages</string>
    <string name="login_dialog_title">Please, wait</string>
...
    <string name="password_requirements_label">Your password must have:</string>
    <string name="password_requirement_1">1 digit</string>
    <string name="password_requirement_2">1 letter</string>
    <string name="password_requirement_3">1 special character</string>
    <string name="password_requirement_4">Between 8 and 30 characters</string>
    <string name="profile_activity_title">Profile</string>
    <string name="update_account">Update credentials</string>
    <string name="delete_account">Delete account</string>
    <string name="favorite_button_description">Favorite words</string>
    <string name="warning_form_validation">Form validation error. Please, verify the values specified in the form.</string>
    <string name="warning_password_requirements">The password must fulfill all the listed requirements</string>
    <string name="successful_signup_message">Account created successfully</string>
    <string name="confirm_deletion_text">Confirm that you want to delete your account by typing <b>\"permanently delete\"</b> in the input below:</string>
    <string name="confirm_deletion_activity_title">Confirm deletion</string>
    <string name="confirm_deletion_string">permanently delete</string>
    <string name="warning_confirm_deletion">The text that you typed does not match <b>\"permanently delete\"</b></string>
    <string name="account_deletion_success">Account successfully deleted</string>
    <string name="password_confirmation_label">Repeat the password</string>
    <string name="successful_update_message">Account successfully updated</string>
    <string name="warning_password_confirmation">The passwords are not equal</string>
    <string name="or">or</string>
...
    <string name="loading_content_description">Loading</string>
    <string name="default_label_text">Default label</string>
    <string name="fulfilled_requirement_content_description">Fulfilled</string>
    <string name="hint_edit_text_account_search">Search an account</string>
    <string name="search_account_button">Search account</string>
    <string name="account_picture_content_description">Account picture</string>
    <string name="account_username">Username: %1$s</string>
    <string name="account_email">Email: %1$s</string>
    <string name="account_bio">Bio: %1$s</string>
    <string name="game_image_view_content_description">Game</string>
    <string name="language_image_view_content_description">Language flag</string>
    <string name="icon_heart_content_description">Icon heart</string>
    <string name="bio_label">Bio</string>

    <string name="warning_outdated_data">A data update attempt failed, so this page may be outdated.</string>
...
