...
                android:id="@+id/personal_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bio_text_view"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/account_credentials"
                    android:layout_width="0dp"
...
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/profile_picture_image_view">

                    <TextView
                        android:id="@+id/username_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Username"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/email_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Email"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal_data"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bio_text_view"
                app:layout_constraintBottom_toTopOf="@id/delete_account_button"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/update_account"
                app:icon="@drawable/ic_edit"/>

            <com.google.android.material.button.MaterialButton
...
                android:id="@+id/score_header_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/badges_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/language_spinner"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/score_header_text"/>

...
